tests/invalid/range_no_args/main.py
x: list[int] = [i for i in range()]
